# fastGxE

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  compare_grm_bin.py
docs/: _config.yml  index.md  style.css
docs/_includes/: navigation.html
docs/assets/css/: custom.css
docs/documentation/: 01_About.md  02_installation.md  03_Tutorial.md  03_data.md  04_Experiments.md  04_Tutorial.md  05_Experiments.md
example/: test_simu_pheno.txt  test_simu_truth.txt
fastgxe/: fastgxe.cpp  fastgxe.hpp  main.cpp  mmsusie.cpp  mmsusie.hpp  mom.cpp  mom.hpp
gmatrix/: CMakeLists.txt  compile2.txt  gmatrix.cpp  gmatrix.hpp  main.cpp  processGRM.cpp  processGRM.hpp
python/: simu.py
simu/: simu.py
test/: test.sh
utils/: EigenMatrix_utils.cpp  EigenMatrix_utils.hpp  acat_utils.cpp  acat_utils.hpp  chi2score.cpp  chi2score.hpp  fatal_error.hpp  geno.cpp  geno.hpp  iterator_utils.cpp  iterator_utils.hpp  partitionLowerTriangle.cpp  partitionLowerTriangle.hpp  phen.cpp  phen.hpp  random_num.cpp  random_num.hpp  random_sampling.cpp  random_sampling.hpp  someCommonFun.cpp  someCommonFun.hpp  string_utils.cpp  string_utils.hpp
